--- a/style.css
+++ b/style.css
@@ -116,6 +116,9 @@ header{
       text-align: center;
   } */
 
+  header h1{
+      font-size: 32px;
+  }
 
   article{
     background-color: #1B262F;
@@ -217,6 +220,9 @@ aside h3{
 
   @media only screen and (min-width: 768px) {
     
+    header h1{
+        font-size: 48px;
+    }
 
 
   .menu{
@@ -347,7 +353,10 @@ aside h3{
         width: 546px;
         height: 243px;
     }
-
+   
+    header h1{
+        font-size: 52px;
+    }
 
     .row{
         flex-direction: row-reverse;
