--- a/about.css
+++ b/about.css
@@ -93,6 +93,9 @@ img-container{
     border-radius: 24px;
     margin: auto;   
   }
+  .butn-primary:hover{
+    background-color: rgba(186, 66, 112, 0.75);
+}
 
 
 .mail_input{
@@ -151,7 +154,10 @@ aside{
  }
 
 
-
+ .primary-btn:hover{
+    background-color: #36536B;
+    color: #F2F2F2;
+}
 
 footer{
     /* margin: 10px; */
@@ -166,6 +172,9 @@ footer{
     
 }
 
+footer li{
+    cursor: pointer;
+}
 
 
 /* footer ul{ */
