--- a/pricing.css
+++ b/pricing.css
@@ -43,6 +43,9 @@ main h1{
     font-size: 52px;
 }
 
+.butn-primary:hover{
+    background-color: rgba(186, 66, 112, 0.75);
+}
 
 main ul{
     display: flex;
@@ -65,6 +68,11 @@ border: 1px solid #36536B;
 margin-left: 6%;
 
 
+}
+
+.primary-btn:hover{
+    background-color: #36536B;
+    color: #F2F2F2;
 }
 
 .hr{
@@ -92,6 +100,9 @@ span img{
     padding-right: 10px;
 }
 
+footer li{
+    cursor: pointer;
+}
 
 
 
@@ -164,5 +175,7 @@ main .row{
 .main-ul{
     padding-left: 2.8px;
    }
+
+
 
 }
