--- a/about.css
+++ b/about.css
@@ -4,36 +4,63 @@ body{
     /* background-size: 100%; */
     background-repeat: no-repeat;
     /* background-color: #F2F2F2; */
-    background-color:  #F2F2F2;
+    /* background-color:  #F2F2F2; */
     /* background-color: #f2f2f29b; */
     margin: 0;
     padding: 0;
     font-size: 15px;
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 700;
 
+}
+
+
+h1, h2, h3{
+    font-family: 'DM Serif Display', serif;
+    /* font-weight: 400; */
 }
 
 body p{
     color: #36536B;
+    font-weight: 400;
 }
 
+
+.nav-butn-primary{
+    height: 48px;
+    width: 173px;  
+    background-color: #BA4270; 
+    color: #FBFCFE; 
+    border: none;
+    display: block;
+    border-radius: 24px;
+    margin: auto;
+    font-weight: 700;   
+  }
+
+  nav{
+    font-weight: 700;
+}
+
+  nav ul li{
+      text-align: center;
+      
+  }
+
+  nav ul li a{
+  text-decoration: none;
+      color: #36536B;
+  }
+
+  .navbar-toggler{
+      border: none;
+  }
 
 h1, h2{
     color: #36536B;
 }
  
-nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-}
 
-nav a{
-    text-decoration: none;
-}
-
-nav .nav-list-container{
-    display: none;
-}
 
 
 
@@ -91,7 +118,8 @@ img-container{
     border: none;
     display: block;
     border-radius: 24px;
-    margin: auto;   
+    margin: auto;
+    font-weight: 700;   
   }
   .butn-primary:hover{
     background-color: rgba(186, 66, 112, 0.75);
@@ -107,7 +135,8 @@ img-container{
     border-radius: 24px;
     border: none;
     box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
+    font-weight: 700; 
      
  }
 
@@ -205,18 +234,10 @@ footer .list-inline-item{
 
 @media screen and (min-width: 768px){
 
-    .menu{
-        display: none;
-    }
   
-    nav{
-        display: flex;
-    }
-  
-    .nav-list-container{
-        display: flex;
-    }    
-
+    nav ul li{
+        padding-left: 40px;
+         }
 
 header h1{
 font-size: 48px;    
@@ -329,6 +350,12 @@ letter-spacing: -0.369231px;
 
 @media screen and (min-width: 992px){
 
+    body{
+        background-image: url("./assets/shared/desktop/bg-pattern-circle.svg");
+        background-position:  right top -550px;
+        background-size: 780px 780px;
+    }
+
 header h1{
 height: 189px;
 width: 730px;
@@ -337,6 +364,15 @@ text-align: start;
 margin: 2% 5%;
 
 }
+
+nav{
+    margin: 1% 3%;
+}
+
+
+nav ul li{
+    padding-left: 30%;
+     }
 
 section .row{
     display: flex;
