--- a/contact.css
+++ b/contact.css
@@ -4,19 +4,70 @@ body{
     /* background-size: 100%; */
     background-repeat: no-repeat;
     /* background-color: #F2F2F2; */
-    background-color:  #F2F2F2;
+    /* background-color:  #F2F2F2; */
     /* background-color: #f2f2f29b; */
     margin: 0;
     padding: 0;
     font-size: 15px;
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 700;
+    color: #36536B;
 
 }
+
+body p{
+    /* color: #36536B; */
+    font-weight: 400;
+}
+
+h1, h2, h3{
+    font-family: 'DM Serif Display', serif
+}
+
+
+.nav-butn-primary{
+    height: 48px;
+    width: 173px; 
+    background-color: #BA4270; 
+    color: #FBFCFE; 
+    border: none;
+    display: block;
+    border-radius: 24px;
+    margin: auto;
+    font-weight: 700;   
+  }
+
+
+    nav{
+      font-weight: 700;
+  }
+
+  nav ul li{
+    text-align: center;
+    
+}
+
+nav ul li a{
+  text-decoration: none;
+  color: #36536B;
+}
+
+  .navbar-toggler{
+      border: none;
+  }
+
 
 
 
 
 .form-label{
     margin-left: 10px;
+    font-weight: 400;
+    color: rgba(54, 83, 107, 0.5);
+}
+
+.form-label :hover{
+    color: #36536B;  
 }
 
 .form-input{
@@ -79,19 +130,7 @@ form input :active{
         border: 1px solid #FF0000;
     }
 
-nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-}
 
-nav a{
-    text-decoration: none;
-}
-
-nav .nav-list-container{
-    display: none;
-}
 
 
 
@@ -118,7 +157,8 @@ main h2{
     border: none;
     display: block;
     border-radius: 24px;
-    margin: auto;   
+    margin: auto;
+    font-weight: 700;   
   }
 
   .butn-primary:hover{
@@ -146,7 +186,8 @@ main h2{
      border-radius: 24px;
      border: none;
      box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
-     margin-bottom: 1rem; 
+     margin-bottom: 1rem;
+     font-weight: 700; 
       
   }
 
@@ -219,17 +260,11 @@ header h1{
     font-size: 48px;
 }
 
-.menu{
-    display: none;
-}
+nav ul li{
+    padding-left: 40px;
+     }
 
-nav{
-    display: flex;
-}
 
-.nav-list-container{
-    display: flex;
-}
 
 
 main h2{
@@ -263,6 +298,10 @@ main h2{
     display: flex;
     flex-direction: row; 
     align-items: stretch;
+ }
+
+ #aside_input h2{
+     color: #36536B;
  }
 
 
@@ -300,6 +339,18 @@ main h2{
 
 @media screen and (min-width: 992px){
 
+
+    body{
+        background-image: url("./assets/shared/desktop/bg-pattern-circle.svg");
+        background-position:  right top -550px;
+        background-size: 780px 780px;
+    }
+
+    nav{
+        margin: 1% 3%;
+    }
+
+
 header h1{
     text-align: start;
     font-size: 56px;
@@ -311,6 +362,9 @@ header{
     padding-bottom: 5%;
 }
 
+nav ul li{
+    padding-left: 30%;
+     }
 
 .btn-container{
     text-align: start;
