--- a/style.css
+++ b/style.css
@@ -18,25 +18,51 @@ body{
     margin: 0;
     padding: 0;
     font-size: 15px;
+    font-family: 'Public Sans', sans-serif;
 
 }
 
+body p{
+    color: #36536B;
+    font-weight: 400;
+}
+
+h1, h2, h3{
+    font-family: 'DM Serif Display', serif
+}
 
 
+.nav-butn-primary{
+    height: 48px;
+    width: 173px;  
+    background-color: #BA4270; 
+    color: #FBFCFE; 
+    border: none;
+    display: block;
+    border-radius: 24px;
+    margin: auto;
+    font-weight: 700;   
+  }
+
+
+  nav{
+      font-weight: 700;
+  }
+
+  nav ul li{
+    text-align: center;
+    
+}
+
+nav ul li a{
+  text-decoration: none;
+  color: #36536B;
+}
+
+  .navbar-toggler{
+      border: none;
+  }
  
-nav{
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-}
-
-nav a{
-    text-decoration: none;
-}
-
-nav .nav-list-container{
-    display: none;
-}
 
 /* .primary-btn:hover{
     background-color: #36536B;
@@ -49,10 +75,6 @@ nav .nav-list-container{
 }
 
 
-.article-btn:hover{
-    color: #36536B;
-    background-color: #FBFCFE;
-}
 
   
   
@@ -90,7 +112,8 @@ header{
     border: none;
     display: block;
     border-radius: 24px;
-    margin: auto;   
+    margin: auto;
+    font-weight: 700;   
   }
 
 
@@ -105,7 +128,8 @@ header{
      border-radius: 24px;
      border: none;
      box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
-     margin-bottom: 1rem; 
+     margin-bottom: 1rem;
+     font-weight: 700; 
       
   }
 
@@ -147,6 +171,29 @@ header{
     line-height: 28px;
     /* text-align: center;  */
  }
+
+ article p{
+    height: 112px;
+    width: 445px;
+
+    
+ }
+
+ .article-btn{
+    height: 48px;
+    width: 129px;
+    border-radius: 24px;
+    border: 1px solid #FBFCFE;
+    color: #FBFCFE;
+    background-color: #1B262F;
+    font-weight: 700;
+    
+ }
+
+.article-btn:hover{
+    color: #1B262F;
+    background-color: #FBFCFE;
+}
 
 main section{
     padding-left: 1rem;
@@ -241,17 +288,11 @@ aside h3{
     }
 
 
-  .menu{
-      display: none;
-  }
+    nav ul li{
+        padding-left: 40px;
+         }
 
-  nav{
-      display: flex;
-  }
 
-  .nav-list-container{
-      display: flex;
-  }
    
 
   /* header .container{
@@ -360,6 +401,10 @@ aside h3{
         background-size: 780px 780px;
     }
 
+    nav{
+        margin: 1% 3%;
+    }
+
     .header-img{
         width: 257.61px;
         height: 100%;
@@ -373,6 +418,15 @@ aside h3{
     header h1{
         font-size: 52px;
     }
+
+    header p{
+        text-align: start;
+        padding-left: 4%;
+    }
+
+    nav ul li{
+        padding-left: 30%;
+         }
 
     .row{
         flex-direction: row-reverse;
